<resources>
    <string name="toggle_map">Toggle map visibility</string>
    <string name="clear_log">Clear log</string>
    <string name="debug_run">Run</string>
    <string name="activity_settings">IITC Mobile Settings</string>
    <string name="activity_plugins">IITC Plugins</string>
    <string name="activity_share">Share using…</string>
    <string name="activity_share_to_clipboard">Copy to clipboard</string>
    <string name="activity_save_to_file">Save to file</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Show navigation menu</string>
    <string name="drawer_close">Hide navigation menu</string>
    <string name="version">Print Version</string>
    <string name="close">Close</string>
    <string name="download_description">Downloading latest intel package…</string>
    <string name="bugtracker">bugtracker</string>
    <string name="iitc_website">IITC website</string>
    <string name="pref_about_title">About IITC Mobile</string>
    <string name="pref_about_text">
        <![CDATA[
        <h1>Ingress Intel Total Conversion Mobile</h1>

        <p><b>Build version: ${build_version}</b>
        <br><b>IITC version: ${iitc_version}</b>

        <p><b>by ${cradle_link}, ${fkloft_link} and contributors</b>

        <p><b>Icon by ${giuseppe_lucido_link}</b>

        <p><b>IITC Mobile</b> is an optimized mobile browser for the
        <i>Ingress Intel Total Conversion (IITC)</i> userscript.

        <h3>Community:</h3>

        • Visit the ${website_link} for new releases and the desktop version.<br>
        • Follow the ${tg_iitc_news_link} Telegram channel
          for announcements and join ${tg_iitc_group_link} chat.<br>
        • Join the ${reddit_iitc_link} Reddit community
          - a place to ask for help and discuss with other users.<br>
        • Report issues and propose enhancements at ${bugtracker_link}.<br>

        <h3>Developers:</h3>
        ${github_iitc_link} on Github.

        <h3>IITC Licence:</h3>
        ${ISC_license_text}
        ]]>
    </string>
    <string name="notice_info">
        <![CDATA[
        <p>Hint: Alternative ways to open the info screen:
        <p>
        • tap and hold a portal for a second<br>
        • tap on the left half of the status bar<br>
        ]]>
    </string>
    <string name="notice_extplugins">
        <![CDATA[
        <p>Hint:
        <p>IITC Mobile is able to load external plugins too!
        <p>Add them by clicking the (+) icon at the top right.
        The plugin files have to end with \'.user.js\' and are copied to <b>%1$s</b>
        ]]>
    </string>
    <string name="notice_sharing">
        <![CDATA[
        <p>With <em>Share portal</em> you can:
        <p>
        • send the portal link to other people<br>
        • view the selected portal\'s position in another app<br>
        • open the portal link in a webbrowser<br>

        <p>Hint: By selecting Google Maps (or any other installed navigation software),
        you can quickly navigate to the selected portal.
        <p>These hints also apply for the <em>permalink</em>.
        ]]>
    </string>
    <string name="pref_ui_cat">UI</string>
    <string name="pref_misc_cat">Misc</string>
    <string name="pref_tweaks_cat">Tweaks</string>
    <string name="pref_plugins">IITC Plugins</string>
    <string name="pref_plugins_sum">Plugins extend/modify the IITC experience. Most plugins known from desktop IITC can be found here.</string>
    <string name="pref_plugins_title">Available plugins</string>
    <string name="pref_user_location">Display user location on map</string>
    <string name="pref_persistent_zoom">Persistent zoom level</string>
    <string name="pref_persistent_zoom_sum">Don\'t change zoom level when locate button is pressed</string>
    <string name="pref_user_zoom">Show zoom control</string>
    <string name="pref_user_zoom_sum">Shows +/- buttons even on multitouch capable devices.</string>
    <string name="pref_fullscreen">Configure fullscreen mode</string>
    <string name="pref_fullscreen_sum">Which elements should be hidden in fullscreen mode.
        Note: IITCm can still be controlled via the Navigation Drawers</string>
    <string name="pref_force_desktop">Force desktop mode</string>
    <string name="pref_force_desktop_sum">Nice for tablets, looks awful on smartphones</string>
    <string name="pref_dex_desktop">Support Samsung DeX Mode</string>
    <string name="pref_dex_desktop_sum">Force desktop mode when DeX mode is active</string>
    <string name="pref_language">Language</string>
    <string name="pref_external_storage">Move tiles cache to external storage</string>
    <string name="pref_external_storage_sum">Restart required! Write cache to sdCard.
        External storage has to be mounted.</string>
    <string name="pref_press_twice_to_exit">Press back button twice to exit</string>
    <string name="pref_press_twice_to_exit_sum">Avoids accidental exits</string>
    <string name="pref_advanced_options">Advanced Settings</string>
    <string name="pref_advanced_options_sum">Developer options and advanced tweaks</string>
    <string name="pref_enable_dev_mode">Enable developer mode</string>
    <string name="pref_enable_dev_mode_sum">If enabled, all IITC sources will be loaded from external storage of the Android device.
      Please copy all sources from $IITC_folder/build/mobile/ to /sdcard/IITC_Mobile/dev/.</string>
    <string name="pref_disable_splash">Disable Splash Screen</string>
    <string name="pref_fake_user_agent">Fake User Agent</string>
    <string name="pref_fake_user_agent_sum">Let IITCm appear as a desktop browser for the intel site.
        Note: If just want to use the desktop mode use the \'force desktop mode\' setting</string>
    <string name="pref_android_menu">Configure IITCm menu</string>
    <string name="pref_android_menu_sum">Toggle visibility of IITCm menu entries</string>
    <string name="pref_update_plugins_cat">User plugin updates</string>
    <string name="pref_update_plugins_interval">Third-party plugin update interval</string>
    <string name="pref_update_plugins_interval_sum">How often to check for new versions of user-installed plugins</string>
    <string name="pref_force_plugin_update">Force third-party plugin update</string>
    <string name="pref_force_plugin_update_sum">Update all enabled user-installed plugins</string>
    <string name="pref_secure_updates">Require secure updates</string>
    <string name="pref_secure_updates_sum">If enabled, only https updates are handled</string>
    <string name="pref_hide_fullscreen_notification_bar">System Notification Bar</string>
    <string name="pref_hide_fullscreen_action_bar">IITC Action Bar</string>
    <string name="pref_hide_fullscreen_status_bar">IITC Status Bar</string>
    <string name="pref_hide_fullscreen_navigation_bar">System Navigation Bar</string>
    <string name="pref_user_location_dont_show">Don\'t show user position</string>
    <string name="pref_user_location_show_position">Show user position on map</string>
    <string name="pref_user_location_show_position_and_orientation">Show user position and orientation on map</string>
    <string name="pref_update_plugins_interval_disable">Disable</string>
    <string name="pref_update_plugins_interval_1_day">1 day</string>
    <string name="pref_update_plugins_interval_2_days">2 days</string>
    <string name="pref_update_plugins_interval_1_week">1 week</string>
    <string name="pref_update_plugins_interval_2_weeks">2 weeks</string>
    <string name="pref_webview_zoom">Font size</string>
    <string name="pref_webview_zoom_defaultValue">System default</string>
    <string name="pref_webview_zoom_sum">Affects font/text size in info panel, comm, popup windows, etc…</string>
    <string name="menu_reload">Reload IITC</string>
    <string name="menu_toggle_fullscreen">Fullscreen</string>
    <string name="menu_layer_chooser">Layer Chooser</string>
    <string name="menu_locate">Get Location</string>
    <string name="menu_clear_cookies">Clear cookies</string>
    <string name="menu_search">Search</string>
    <string name="menu_open_plugins">Plugins</string>
    <string name="menu_debug">Debug</string>
    <string name="menu_send_screenshot">Send screenshot</string>
    <string name="menu_plugins_add">Add external plugins</string>
    <string name="menu_plugins_add_url">Add plugins by URL</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_delete">Delete</string>
    <string name="choose_account_to_login">Choose account to login</string>
    <string name="login_failed">Login failed.</string>
    <string name="search_hint">Search locations</string>
    <string name="intent_error">Address could not be opened</string>
    <string name="msg_copied">Copied to clipboard…</string>
    <string name="msg_prepare_screenshot">Preparing…</string>
    <string name="msg_take_screenshot">Taking screenshot…</string>
    <string name="notice_do_not_show_again">Do not show again</string>
    <string name="sign_in_to">Sign in to %1$s %2$s"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in_action">Sign in</string>
    <string name="tab_map">Locate</string>
    <string name="tab_share">Share</string>
    <string name="tab_browser">Intel</string>
    <string name="label_highlighter">Highlighter</string>
    <string name="label_base_layer">Base Layer</string>
    <string name="label_overlay_layers">Overlay Layers</string>
    <string name="install_dialog_top">Install external plugin?</string>
    <string name="install_dialog_msg">
        <![CDATA[
        <p>IITCm was requested to install the following javascript file:
        <p>%1$s
        <p><b>Be careful:</b> Javascript from external sources may contain harmful code (spyware etc.)!
        <p>Are you sure you want to proceed?]]>
    </string>
    <string name="appintro_welcome_description">
        This is a mobile version of the indispensable helper for the Ingress player.\n\n
        Ingress Intel Total Conversion (IITC) is an add-on that works as an overlay for the official Intel Ingress map.\n\n
        IITC completely changes the way you work with the map, significantly increases efficiency by applying hardware acceleration and expands the capabilities vía the use of various plugins.
    </string>
    <string name="appintro_location_title">Location permission</string>
    <string name="appintro_location_description">
        IITC-CE Mobile requires permission to access your location for easy navigation.\n\n
        But don\'t worry: we don\'t send data about your location anywhere.
    </string>
    <string name="appintro_navigation_title">Navigation</string>
    <string name="appintro_navigation_description">
        Swipe from the left edge of your screen (or click the menu icon) to evoke the <i>Navigation Drawer</i>.\n
        Click the back icon to return to the map.\n\n
        Some plugins (e.g. <i>portals list</i> and <i>bookmarks</i>) now appear in the <i>Navigation Drawer</i> for quick access.\n
        They won\'t appear in the info pane any more.
    </string>
    <string name="appintro_layers_title">Layers/Highlights</string>
    <string name="appintro_layers_description">
        Swipe from the right edge of your screen (or click the layer-chooser icon in the ActionBar) to evoke the <i>Layer Drawer</i>.\n\n
        Here you can change the online map service or enable/disable display of necessary elements on the map.
    </string>
    <string name="appintro_plugins_title">Plugins</string>
    <string name="iitc_ce_mobile" translatable="false">IITC-CE Mobile</string>
    <string name="continue_in_english" translatable="false">Continue in English</string>
    <string name="debug_info_dialog_share_btn">Share</string>
    <string name="debug_info_dialog_copy_btn">Copy</string>
    <string name="ok">OK</string>
</resources>