<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_vertical_margin">

    <TextView
            android:id="@+id/debug_info_dialog_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
                android:id="@+id/btnShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/debug_info_dialog_share_btn"/>

        <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        <!-- Copy button -->
        <Button
                android:id="@+id/btnCopy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/debug_info_dialog_copy_btn"/>

        <!-- OK button -->
        <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/ok"/>
    </LinearLayout>
</LinearLayout>
