<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_layout" />

        <org.exarhteam.iitc_mobile.IITC_WebView
            android:id="@+id/iitc_webview"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:src="@drawable/iitc"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

        <FrameLayout
            android:id="@+id/layoutDebug"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone">

            <com.melnykov.fab.FloatingActionButton
                android:id="@+id/debugScrollButton"
                android:layout_width="wrap_content"
                android:layout_height="165dp"
                android:layout_gravity="bottom|right"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_keyboard_arrow_down_white_fab"
                fab:fab_type="mini"
                app:fab_colorRipple="@color/iitc_blue_lighten_4"
                fab:fab_colorNormal="@color/iitc_blue_lighten_3"
                fab:fab_colorPressed="@color/iitc_blue_lighten_3" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lvDebug"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@color/iitc_blue_dark"
                android:scrollbars="vertical"
                android:stackFromBottom="true"
                android:transcriptMode="alwaysScroll" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/viewDebug"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/iitc_blue_dark"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/debug_panel_background"
                android:orientation="horizontal"
                android:padding="1dp">

                <ImageButton
                    android:id="@+id/btnToggleMapVisibility"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/button_margin"
                    android:background="@drawable/debug_button"
                    android:contentDescription="@string/toggle_map"
                    android:onClick="onToggleMapVisibility"
                    android:src="@drawable/ic_map_white" />

                <ImageButton
                    android:id="@+id/btnClearLog"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/button_margin"
                    android:background="@drawable/debug_button"
                    android:contentDescription="@string/clear_log"
                    android:onClick="onClearLog"
                    android:src="@drawable/ic_clear_all_white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/btnDebugUp"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/button_margin"
                    android:background="@drawable/debug_button"
                    android:contentDescription="@string/clear_log"
                    android:onClick="onDebugHistoryUp"
                    android:src="@drawable/ic_keyboard_arrow_up_white" />

                <ImageButton
                    android:id="@+id/btnDebugDown"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/button_margin"
                    android:background="@drawable/debug_button"
                    android:contentDescription="@string/clear_log"
                    android:onClick="onDebugHistoryDown"
                    android:src="@drawable/ic_keyboard_arrow_down_white" />

                <ImageButton
                    android:id="@+id/btnDebugLeft"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/button_margin"
                    android:background="@drawable/debug_button"
                    android:contentDescription="@string/clear_log"
                    android:onClick="onDebugCursorMoveLeft"
                    android:src="@drawable/ic_keyboard_arrow_left_white" />

                <ImageButton
                    android:id="@+id/btnDebugRight"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/button_margin"
                    android:background="@drawable/debug_button"
                    android:contentDescription="@string/clear_log"
                    android:onClick="onDebugCursorMoveRight"
                    android:src="@drawable/ic_keyboard_arrow_right_white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/iitc_blue_dark"
                android:orientation="horizontal"
                android:paddingLeft="2dp"
                android:paddingRight="2dp">

                <EditText
                    android:id="@+id/editCommand"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/background_light"
                    android:imeActionLabel="@string/debug_run"
                    android:imeOptions="actionGo"
                    android:inputType="textMultiLine|textNoSuggestions"
                    android:maxLines="4"
                    android:textColor="@android:color/background_light"
                    android:textColorHighlight="@android:color/tertiary_text_light"
                    android:textSize="@dimen/debug_text_size"
                    android:typeface="monospace" />

                <ImageButton
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/button_margin"
                    android:background="@drawable/debug_button"
                    android:contentDescription="@string/debug_run"
                    android:onClick="onBtnRunCodeClick"
                    android:src="@drawable/ic_send_white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- The navigation drawer -->

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/drawer_background"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"/>

    <!-- The right drawer -->

    <ListView
        android:id="@+id/right_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/drawer_background"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"/>

</androidx.drawerlayout.widget.DrawerLayout>
